<resources>
    <string name="app_name">Geo Quiz</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>
    <string name="next_text">next</string>
    <string name="prev_text">prev</string>
    <string name="question_1">question1</string>
    <string name="question_2">question2</string>
    <string name="question_3">question3</string>
    <string name="cheat_btn">cheat</string>
    <string name="show_answer">show answer</string>
</resources>
